alignment correction

--- a/css/abt.css
+++ b/css/abt.css
@@ -414,6 +414,7 @@ form.contFrm {
     margin-bottom: 2vh;
     color: white;
 }
+
 .inptFld {
     width: 100%;
     height: 50px;
@@ -474,6 +475,10 @@ form.contFrm {
     }
 }
 
+.navbar-brand {
+    width: 40% !important;
+}
+
 @media (max-width: 767px) {
     .contact-detail span {
         width: auto;
@@ -489,6 +494,12 @@ form.contFrm {
 
     .contFrm {
         padding-top: 5%;
+    }
+
+    .brand {
+        width: 100%;
+        height: auto !important;
+        display: inline !important;
     }
 }
 
@@ -516,6 +527,10 @@ form.contFrm {
     .contFrm {
         padding-top: 5%;
     }
+
+    .navbar-brand {
+        width: 50% !important;
+    }
 }
 
 @media (max-width: 480px) {
@@ -524,6 +539,7 @@ form.contFrm {
     .contact-ul b {
         font-size: 16px;
     }
+
     .carousel-item {
         font-size: 16px !important;
     }
